--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 		<title>finisy - Business & Digital Agency HTML Template</title>
 
 		<!-- Favicon -->
-		<link rel="icon" type="image/png" sizes="56x56" href="http://html.unifytheme.com/finisy/images/fav-icon/icon.png">
-
+		<link rel="icon" type="image/png" sizes="56x56" href="icon.png">
 
 		<!-- Main style sheet -->
 		<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -28,7 +27,7 @@
 			<script src="vendor/respond.js"></script>
 		<![endif]-->
 
-			
+
 	</head>
 
 	<body>
@@ -66,16 +65,16 @@
 						<!-- ============================ Theme Menu ========================= -->
 						<nav class="theme-main-menu navbar float-right" id="mega-menu-wrapper">
 							<!-- Brand and toggle get grouped for better mobile display -->
-						   <div class="navbar-header">
-						     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
-						       <span class="sr-only">Toggle navigation</span>
-						       <span class="icon-bar"></span>
-						       <span class="icon-bar"></span>
-						       <span class="icon-bar"></span>
-						     </button>
-						   </div>
-						   <!-- Collect the nav links, forms, and other content for toggling -->
-						   <div class="collapse navbar-collapse" id="navbar-collapse-1">
+							<div class="navbar-header">
+								<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+									<span class="sr-only">Toggle navigation</span>
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+								</button>
+							</div>
+							<!-- Collect the nav links, forms, and other content for toggling -->
+							<div class="collapse navbar-collapse" id="navbar-collapse-1">
 								<ul class="nav">
 									<li class="dropdown-holder active"><a href="http://html.unifytheme.com/finisy/index.html" class="tran3s">Home</a>
 										<ul class="sub-menu">
@@ -118,14 +117,14 @@
 									<li><a href="http://html.unifytheme.com/finisy/contact.html" class="tran3s">Contact us</a></li>
 									<li class="login"><a href="index.html#" class="tran3s">Login</a></li>
 								</ul>
-						   </div><!-- /.navbar-collapse -->
+							</div><!-- /.navbar-collapse -->
 						</nav> <!-- /.theme-main-menu -->
 					</div> <!-- /.header-wrapper -->
 				</div> <!-- /.container -->
 			</header> <!-- /.theme-menu-wrapper -->
 
 
-			
+
 			<!-- 
 			=============================================
 				Theme Main Banner
@@ -387,65 +386,65 @@
 						<div class="col-md-7 col-xs-12 wow fadeInRight">
 							<div class="tab-content">
 								<div id="weekly" class="tab-pane fade in active">
-							    	<div class="row">
-							    		<div class="col-sm-6">
-							    			<div class="price-table">
-							    				<h5>Reguler</h5>
-							    				<strong>$17.<sup>99</sup></strong>
-							    				<ul>
-							    					<li>50 GB Bandwidth</li>
-							    					<li>Super Fast Dashboard</li>
-							    					<li>24 Hours Support</li>
-							    					<li>Custom Managment</li>
-							    				</ul>
-							    				<a href="index.html#" class="p-color tran3s signUp">Sign Up</a>
-							    			</div> <!-- /.price-table -->
-							    		</div> <!-- /.col- -->
-							    		<div class="col-sm-6">
-							    			<div class="price-table">
-							    				<h5>Business</h5>
-							    				<strong>$39.<sup>99</sup></strong>
-							    				<ul>
-							    					<li>50 GB Bandwidth</li>
-							    					<li>Super Fast Dashboard</li>
-							    					<li>24 Hours Support</li>
-							    					<li>Custom Managment</li>
-							    				</ul>
-							    				<a href="index.html#" class="p-color tran3s signUp">Sign Up</a>
-							    			</div> <!-- /.price-table -->
-							    		</div> <!-- /.col- -->
-							    	</div> <!-- /.row -->
+									<div class="row">
+										<div class="col-sm-6">
+											<div class="price-table">
+												<h5>Reguler</h5>
+												<strong>$17.<sup>99</sup></strong>
+												<ul>
+													<li>50 GB Bandwidth</li>
+													<li>Super Fast Dashboard</li>
+													<li>24 Hours Support</li>
+													<li>Custom Managment</li>
+												</ul>
+												<a href="index.html#" class="p-color tran3s signUp">Sign Up</a>
+											</div> <!-- /.price-table -->
+										</div> <!-- /.col- -->
+										<div class="col-sm-6">
+											<div class="price-table">
+												<h5>Business</h5>
+												<strong>$39.<sup>99</sup></strong>
+												<ul>
+													<li>50 GB Bandwidth</li>
+													<li>Super Fast Dashboard</li>
+													<li>24 Hours Support</li>
+													<li>Custom Managment</li>
+												</ul>
+												<a href="index.html#" class="p-color tran3s signUp">Sign Up</a>
+											</div> <!-- /.price-table -->
+										</div> <!-- /.col- -->
+									</div> <!-- /.row -->
 								</div> <!-- /#weekly -->
-							  	<div id="monthly" class="tab-pane fade">
-							    	<div class="row">
-							    		<div class="col-sm-6">
-							    			<div class="price-table">
-							    				<h5>Reguler</h5>
-							    				<strong>$25.<sup>99</sup></strong>
-							    				<ul>
-							    					<li>50 GB Bandwidth</li>
-							    					<li>Super Fast Dashboard</li>
-							    					<li>24 Hours Support</li>
-							    					<li>Custom Managment</li>
-							    				</ul>
-							    				<a href="index.html#" class="p-color tran3s signUp">Sign Up</a>
-							    			</div> <!-- /.price-table -->
-							    		</div> <!-- /.col- -->
-							    		<div class="col-sm-6">
-							    			<div class="price-table">
-							    				<h5>Business</h5>
-							    				<strong>$59.<sup>99</sup></strong>
-							    				<ul>
-							    					<li>50 GB Bandwidth</li>
-							    					<li>Super Fast Dashboard</li>
-							    					<li>24 Hours Support</li>
-							    					<li>Custom Managment</li>
-							    				</ul>
-							    				<a href="index.html#" class="p-color tran3s signUp">Sign Up</a>
-							    			</div> <!-- /.price-table -->
-							    		</div> <!-- /.col- -->
-							    	</div> <!-- /.row -->
-							  	</div> <!-- /#monthly -->
+								<div id="monthly" class="tab-pane fade">
+									<div class="row">
+										<div class="col-sm-6">
+											<div class="price-table">
+												<h5>Reguler</h5>
+												<strong>$25.<sup>99</sup></strong>
+												<ul>
+													<li>50 GB Bandwidth</li>
+													<li>Super Fast Dashboard</li>
+													<li>24 Hours Support</li>
+													<li>Custom Managment</li>
+												</ul>
+												<a href="index.html#" class="p-color tran3s signUp">Sign Up</a>
+											</div> <!-- /.price-table -->
+										</div> <!-- /.col- -->
+										<div class="col-sm-6">
+											<div class="price-table">
+												<h5>Business</h5>
+												<strong>$59.<sup>99</sup></strong>
+												<ul>
+													<li>50 GB Bandwidth</li>
+													<li>Super Fast Dashboard</li>
+													<li>24 Hours Support</li>
+													<li>Custom Managment</li>
+												</ul>
+												<a href="index.html#" class="p-color tran3s signUp">Sign Up</a>
+											</div> <!-- /.price-table -->
+										</div> <!-- /.col- -->
+									</div> <!-- /.row -->
+								</div> <!-- /#monthly -->
 							</div>
 						</div>
 					</div> <!-- /.row -->
@@ -625,43 +624,43 @@
 			</footer>
 
 
-	  
-	        <!-- Scroll Top Button -->
+
+			<!-- Scroll Top Button -->
 			<button class="scroll-top tran3s">
 				<i class="fa fa-angle-up" aria-hidden="true"></i>
 			</button>
 
-			
-			
 
 
-		<!-- Js File_________________________________ -->
 
-		<!-- j Query -->
-		<script type="text/javascript" src="vendor/jquery.2.2.3.min.js"></script>
-		<!-- Bootstrap JS -->
-		<script type="text/javascript" src="vendor/bootstrap/bootstrap.min.js"></script>
-		<!-- Bootstrap Select JS -->
-		<script type="text/javascript" src="vendor/bootstrap-select/dist/js/bootstrap-select.js"></script>
 
-		<!-- Vendor js _________ -->
-		<!-- Camera Slider -->
-		<script type='text/javascript' src='vendor/Camera-master/scripts/jquery.mobile.customized.min.js'></script>
-	    <script type='text/javascript' src='vendor/Camera-master/scripts/jquery.easing.1.3.js'></script> 
-	    <script type='text/javascript' src='vendor/Camera-master/scripts/camera.min.js'></script>
-	    <!-- Mega menu  -->
-		<script type="text/javascript" src="vendor/bootstrap-mega-menu/js/menu.js"></script>
-		
-		<!-- WOW js -->
-		<script type="text/javascript" src="vendor/WOW-master/dist/wow.min.js"></script>
-		<!-- owl.carousel -->
-		<script type="text/javascript" src="vendor/owl-carousel/owl.carousel.min.js"></script>
-		<!-- Fancybox -->
-		<script type="text/javascript" src="vendor/fancybox/dist/jquery.fancybox.min.js"></script>
-		
+			<!-- Js File_________________________________ -->
 
-		<!-- Theme js -->
-		<script type="text/javascript" src="js/theme.js"></script>
+			<!-- j Query -->
+			<script type="text/javascript" src="vendor/jquery.2.2.3.min.js"></script>
+			<!-- Bootstrap JS -->
+			<script type="text/javascript" src="vendor/bootstrap/bootstrap.min.js"></script>
+			<!-- Bootstrap Select JS -->
+			<script type="text/javascript" src="vendor/bootstrap-select/dist/js/bootstrap-select.js"></script>
+
+			<!-- Vendor js _________ -->
+			<!-- Camera Slider -->
+			<script type='text/javascript' src='vendor/Camera-master/scripts/jquery.mobile.customized.min.js'></script>
+			<script type='text/javascript' src='vendor/Camera-master/scripts/jquery.easing.1.3.js'></script> 
+			<script type='text/javascript' src='vendor/Camera-master/scripts/camera.min.js'></script>
+			<!-- Mega menu  -->
+			<script type="text/javascript" src="vendor/bootstrap-mega-menu/js/menu.js"></script>
+
+			<!-- WOW js -->
+			<script type="text/javascript" src="vendor/WOW-master/dist/wow.min.js"></script>
+			<!-- owl.carousel -->
+			<script type="text/javascript" src="vendor/owl-carousel/owl.carousel.min.js"></script>
+			<!-- Fancybox -->
+			<script type="text/javascript" src="vendor/fancybox/dist/jquery.fancybox.min.js"></script>
+
+
+			<!-- Theme js -->
+			<script type="text/javascript" src="js/theme.js"></script>
 
 		</div> <!-- /.main-page-wrapper -->
 	</body>
