--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ this_page: home
 	<div class="opacity">
 		<div class="container">
 			<h2>Jasa Pemasangan Iklan Radio Suara Surabaya dari agency terbaik dan cerdas dan professional, kontak sekarang.</h2>
-			<a href="tel:08123480099" class="theme-button">Telfon/Wa {{ site.info_whatsapp }}</a>
+			<a href="{{ site.info_tel }}" class="theme-button">Telfon/Wa {{ site.info_whatsapp }}</a>
 		</div> <!-- /.container -->
 	</div> <!-- /.opacity -->
 </div> <!-- /.purschase-banner -->
