--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ layout: home
 this_page: 404
 link: 404
 title: 404 Halaman tidak ditemukan
-description: Iklan Radio Suara Surabaya beriklan di acara Berita Suara Surabaya, Kelana Kota, Renungan Fajar, Talkshow, Jaring Radio, Memorabilia
+description: Pasang Iklan Radio Suara Surabaya beriklan di acara Berita Suara Surabaya, Kelana Kota, Renungan Fajar, Talkshow, Jaring Radio, Memorabilia
 ---
 
 <!-- 
