--- a/jadwal-acara.html
+++ b/jadwal-acara.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-this_page: jadwal-acara
+this_page: home
 link: jadwal-acara
 title: JADWAL ACARA Iklan Radio Suara Surabaya
 description: Jadwal acara Berita Suara Surabaya, Kelana Kota, Renungan Fajar, Talkshow, Jaring Radio, Memorabilia
