--- a/paket-ramadhan/paket-creative-menu.html
+++ b/paket-ramadhan/paket-creative-menu.html
@@ -4,6 +4,7 @@ title: Iklan Radio Paket Ramadhan Creative Menu
 description: Iklan Radio Paket Ramadhan - Creative Menu, Sajian tentang menu ‐ menu kreatif yang sedang trend di social media maupun di masyarakat baik di kelas atas maupun bawah
 types: blog
 this_page: paket-ramadhan
+image: /images/ramadhan/iklan-radio-paket-creative-menu.jpg
 ---
 
 <img src='{{ site.url }}/images/ramadhan/iklan-radio-paket-creative-menu.jpg' alt='Iklan Radio Suara Surabaya Ramadhan Paket Jejak Sahabat' title='Iklan Radio Suara Surabaya Ramadhan Paket Jejak Sahabat' />
