--- a/paket-ramadhan/paket-khasanah-alquran.html
+++ b/paket-ramadhan/paket-khasanah-alquran.html
@@ -4,6 +4,7 @@ title: Iklan Radio Paket Khasanah AlQuran
 description: Iklan Radio Paket Ramadhan - Khasanah Alquran, Program ini mengupas tentang kandungan ayat – ayat Al Quran terutama yang berhubungan dengan muamalah dan nilai – nilai kemanusiaan
 types: blog
 this_page: paket-ramadhan
+image: /images/ramadhan/iklan-radio-paket-khasanah-alquran.jpg
 ---
 
 <img src='{{ site.url }}/images/ramadhan/iklan-radio-paket-khasanah-alquran.jpg' alt='Iklan Radio Suara Surabaya Ramadhan Paket Khasanah' title='Iklan Radio Suara Surabaya Ramadhan Paket Khasanah' />
