--- a/paket-ramadhan/paket-khasanah-jejak-sahabat.html
+++ b/paket-ramadhan/paket-khasanah-jejak-sahabat.html
@@ -4,6 +4,7 @@ title: Iklan Radio Paket Jejak Sahabat
 description: Iklan Radio Paket Ramadhan - Jejak Sahabat, Program Siaran yang di kemas Monolog, dengan menyajikan Kisah - kisah para sahabat Rasulullah dan Tokoh – Tokoh Islam yang mengikuti jejak Rasulullah, meskipun belum pernah pernah bertemu Rasulullah
 types: blog
 this_page: paket-ramadhan
+image: /images/ramadhan/iklan-radio-paket-jejak-sahabat.jpg
 ---
 
 <img src='{{ site.url }}/images/ramadhan/iklan-radio-paket-jejak-sahabat.jpg' alt='Iklan Radio Suara Surabaya Ramadhan Paket Jejak Sahabat' title='Iklan Radio Suara Surabaya Ramadhan Paket Jejak Sahabat' />
