--- a/paket-ramadhan/paket-mutiara-kisah.html
+++ b/paket-ramadhan/paket-mutiara-kisah.html
@@ -4,6 +4,7 @@ title: Iklan Radio Paket Ramadhan Mutiara Kisah
 description: Iklan Radio Paket Ramadhan - Mutiara Kisah, Kumpulan kisah – kisah inspiratif tentang cerita perjuangan, pemuda, persahabatan, kemajemukan, kekuatan iman dan cinta, dsb Akan tayang selama bulan Ramadhan, dikemas secara monolog
 types: blog
 this_page: paket-ramadhan
+image: /images/ramadhan/mutiara-kisah.jpg
 ---
 
 <img src='{{ site.url }}/images/ramadhan/mutiara-kisah.jpg' alt='Iklan Radio Suara Surabaya Ramadhan Paket Jejak Sahabat' title='Iklan Radio Suara Surabaya Ramadhan Paket Jejak Sahabat' />
