--- a/paket-ramadhan/paket-tasbih-ramadhan.html
+++ b/paket-ramadhan/paket-tasbih-ramadhan.html
@@ -4,6 +4,7 @@ title: Iklan Radio Paket Ramadhan Tasbih Ramadhan
 description: Iklan Radio Paket Ramadhan - Tasbih Ramadhan, Ceramah singkat (paket Kultum) jelang adzan maghrib. Materi berhubungan dengan ukhuwah, keberagaman dengan penyampaian yang lebih kontektual dan universal
 types: blog
 this_page: paket-ramadhan
+image: /images/ramadhan/iklan-radio-paket-tasbih-quran.jpg
 ---
 
 <img src='{{ site.url }}/images/ramadhan/iklan-radio-paket-tasbih-quran.jpg' alt='{{ page.title }}' title='{{ page.title }}' />
