--- a/rate-iklan-suara-surabaya-2017.html
+++ b/rate-iklan-suara-surabaya-2017.html
@@ -4,6 +4,7 @@ this_page: rate-iklan
 link: rate-iklan-suara-surabaya-2017
 title: Rate Iklan Radio Suara Surabaya 2018
 description: Daftar Harga Pemasangan Iklan Radio Suara Surabaya 2018, berbagai program Spot, Adlibs, Talkshow harga murah
+image: /images/rate-agen-iklan-radio-suara-surabaya-versi-2-2018.jpg
 ---
 
 <!-- 
@@ -17,6 +18,8 @@ description: Daftar Harga Pemasangan Iklan Radio Suara Surabaya 2018, berbagai p
 			<div class="col-md-8 col-xs-12 blog-details-content">
 				<div class="single-blog">
 					<div class="text">
+						<img src="{{site.url}}/images/rate-agen-iklan-radio-suara-surabaya-versi-2-2018.jpg" class="img-responsive" 
+											title="Rate Harga Agen Iklan Radio Suara Surabaya 2018" alt="Rate Harga Agen Iklan Radio Suara Surabaya 2018" />
 						<table id="tablepress-1" class="table table-responsive table-striped tablepress tablepress-id-1">
 							<thead>
 								<tr class="row-1 odd">
@@ -76,6 +79,7 @@ description: Daftar Harga Pemasangan Iklan Radio Suara Surabaya 2018, berbagai p
 								</tr>
 							</tbody>
 						</table>
+						{% include parts/catatan.html %}
 					</div>
 				</div> <!-- /.single-blog -->
 			</div>
