--- a/paket-ramadhan/paket-khasanah-cari-tahu-yuk.html
+++ b/paket-ramadhan/paket-khasanah-cari-tahu-yuk.html
@@ -4,6 +4,7 @@ title: Iklan Radio Paket Cari Tahu Yuk!
 description: Iklan Radio Paket Ramadhan - Cari Tahu Yuk!, Program tanya jawab praktis tentang akidah agama, ibadah sampai dengan perilaku keseharian sesuai dengan ajaran Islam.
 types: blog
 this_page: paket-ramadhan
+image: /images/ramadhan/iklan-radio-paket-cari-tahu-yuk.jpg
 ---
 
 <img src='{{ site.url }}/images/ramadhan/iklan-radio-paket-cari-tahu-yuk.jpg' alt='Iklan Radio Suara Surabaya Ramadhan Paket Cari Tahu Yuk' title='Iklan Radio Suara Surabaya Ramadhan Paket Cari Tahu Yuk' />
