--- a/paket-iklan-radio/website-and-sosmed.html
+++ b/paket-iklan-radio/website-and-sosmed.html
@@ -13,7 +13,7 @@ image: /images/paket-iklan-website-dan-sosmed-suara-surabaya-versi-1-2018.jpg
 	<tbody>
 		<tr>
 			<td colspan="5">
-				<p>TARIF IKLAN SOSMED 2018 (SUARA SURABAYA)</p>
+				<h2>TARIF IKLAN SOSMED 2018 (SUARA SURABAYA)</h2>
 			</td>
 		</tr>
 		<tr>
@@ -339,17 +339,8 @@ image: /images/paket-iklan-website-dan-sosmed-suara-surabaya-versi-1-2018.jpg
 				<p>Rp. 7.500.000,-</p>
 			</td>
 		</tr>
-		<tr>
-			<td>
-				<p>KETERANGAN</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="3">
-				<p>Cancelation Order Paling Lambat H-14 dari Jadwal Iklan pertama tayang per PO</p>
-			</td>
-		</tr>
 	</tbody>
 </table>
-
+<h4>Keterangan</h4>
+<p class="alert alert-warning">Cancelation Order Paling Lambat H-14 dari Jadwal Iklan pertama tayang per PO</p>
 {% include parts/catatan.html %}
