--- a/paket-iklan-radio/weekend-and-sosmed.html
+++ b/paket-iklan-radio/weekend-and-sosmed.html
@@ -13,7 +13,7 @@ image: /images/paket-iklan-weekend-dan-sosmed-suara-surabaya-versi-1-2018.jpg
 	<tbody>
 		<tr>
 			<td colspan="2">
-				<p>&bull; Jam Tayang :</p>
+				<h3>&bull; Jam Tayang :</h3>
 				<p>TRAFFIC HOUR ( 06.00 - 09.59 &amp; 16.00 - 19.59 )</p>
 				<p>PRIME TIME ( 05.00 - 05.59 &amp; 10.00 - 15.59 )</p>
 				<p>REGULER TIME ( 20.00 - 04.59 )</p>
@@ -22,7 +22,7 @@ image: /images/paket-iklan-weekend-dan-sosmed-suara-surabaya-versi-1-2018.jpg
 		</tr>
 		<tr>
 			<td colspan="2">
-				<p>&bull; PAKET WEEKEND 1 (SPOT + SosMed)</p>
+				<h3>&bull; PAKET WEEKEND 1 (SPOT + SosMed)</h3>
 			</td>
 		</tr>
 		<tr>
@@ -30,7 +30,11 @@ image: /images/paket-iklan-weekend-dan-sosmed-suara-surabaya-versi-1-2018.jpg
 				<p>JADWAL</p>
 			</td>
 			<td>
-				<p>KAMIS - 1 Spot Traffic Hour + 2 Spot Prime Time JUMAT - 1 Spot Traffic Hour + 2 Spot Prime Time&nbsp;SABTU - 1 Spot Traffic Hour + 2 Spot Prime Time&nbsp;MINGGU - 1 Spot Traffic Hour + 2 Spot Prime Time&nbsp;1 x Posting Facebook E100</p>
+				<p>KAMIS - 1 Spot Traffic Hour + 2 Spot Prime Time
+					<br />JUMAT - 1 Spot Traffic Hour + 2 Spot Prime Time
+					<br />SABTU - 1 Spot Traffic Hour + 2 Spot Prime Time
+					<br />MINGGU - 1 Spot Traffic Hour + 2 Spot Prime Time
+					<br />1 x Posting Facebook E100</p>
 			</td>
 		</tr>
 		<tr>
@@ -59,7 +63,7 @@ image: /images/paket-iklan-weekend-dan-sosmed-suara-surabaya-versi-1-2018.jpg
 		</tr>
 		<tr>
 			<td colspan="2">
-				<p>&bull; paket weekend 2 (ADLIBS + SosMed)</p>
+				<h3>&bull; paket weekend 2 (ADLIBS + SosMed)</h3>
 			</td>
 		</tr>
 		<tr>
@@ -67,7 +71,11 @@ image: /images/paket-iklan-weekend-dan-sosmed-suara-surabaya-versi-1-2018.jpg
 				<p>JADWAL</p>
 			</td>
 			<td>
-				<p>KAMIS - 1 Adlibs Traffic Hour + 2 Adlibs Prime Time JUMAT - 1 Adlibs Traffic Hour + 2 Adlibs Prime Time&nbsp;SABTU - 1 Adlibs Traffic Hour + 2 Adlibs Prime Time&nbsp;MINGGU - 1 Adlibs Traffic Hour + 2 Adlibs Prime Time&nbsp;1 x Posting Facebook E100</p>
+				<p>KAMIS - 1 Adlibs Traffic Hour + 2 Adlibs Prime Time
+					<br />JUMAT - 1 Adlibs Traffic Hour + 2 Adlibs Prime Time
+					<br />SABTU - 1 Adlibs Traffic Hour + 2 Adlibs Prime Time
+					<br />MINGGU - 1 Adlibs Traffic Hour + 2 Adlibs Prime Time
+					<br />1 x Posting Facebook E100</p>
 			</td>
 		</tr>
 		<tr>
@@ -96,7 +104,7 @@ image: /images/paket-iklan-weekend-dan-sosmed-suara-surabaya-versi-1-2018.jpg
 		</tr>
 		<tr>
 			<td colspan="2">
-				<p>&bull; paket weekend 3 (SPOT + SosMed)</p>
+				<h3>&bull; paket weekend 3 (SPOT + SosMed)</h3>
 			</td>
 		</tr>
 		<tr>
@@ -104,7 +112,11 @@ image: /images/paket-iklan-weekend-dan-sosmed-suara-surabaya-versi-1-2018.jpg
 				<p>JADWAL</p>
 			</td>
 			<td>
-				<p>KAMIS - 2 Spot Traffic Hour + 2 Spot Prime Time JUMAT - 2 Spot Traffic Hour + 2 Spot Prime Time&nbsp;SABTU - 2 Spot Traffic Hour + 2 Spot Prime Time&nbsp;MINGGU - 2 Spot Traffic Hour + 2 Spot Prime Time&nbsp;1 x Posting Facebook E100</p>
+				<p>KAMIS - 2 Spot Traffic Hour + 2 Spot Prime Time
+					<br />JUMAT - 2 Spot Traffic Hour + 2 Spot Prime Time
+					<br />SABTU - 2 Spot Traffic Hour + 2 Spot Prime Time
+					<br />MINGGU - 2 Spot Traffic Hour + 2 Spot Prime Time
+					<br />1 x Posting Facebook E100</p>
 			</td>
 		</tr>
 		<tr>
@@ -133,7 +145,7 @@ image: /images/paket-iklan-weekend-dan-sosmed-suara-surabaya-versi-1-2018.jpg
 		</tr>
 		<tr>
 			<td colspan="2">
-				<p>&bull; paket weekend 4 (ADLIBS + SosMed)</p>
+				<h3>&bull; paket weekend 4 (ADLIBS + SosMed)</h3>
 			</td>
 		</tr>
 		<tr>
@@ -141,7 +153,11 @@ image: /images/paket-iklan-weekend-dan-sosmed-suara-surabaya-versi-1-2018.jpg
 				<p>JADWAL</p>
 			</td>
 			<td>
-				<p>KAMIS - 2 Adlibs Traffic Hour + 2 Adlibs Prime Time JUMAT - 2 Adlibs Traffic Hour + 2 Adlibs Prime Time&nbsp;SABTU - 2 Adlibs Traffic Hour + 2 Adlibs Prime Time&nbsp;MINGGU - 2 Adlibs Traffic Hour + 2 Adlibs Prime Time&nbsp;1 x Posting Facebook E100</p>
+				<p>KAMIS - 2 Adlibs Traffic Hour + 2 Adlibs Prime Time
+					<br />JUMAT - 2 Adlibs Traffic Hour + 2 Adlibs Prime Time
+					<br />SABTU - 2 Adlibs Traffic Hour + 2 Adlibs Prime Time
+					<br />MINGGU - 2 Adlibs Traffic Hour + 2 Adlibs Prime Time
+					<br />1 x Posting Facebook E100</p>
 			</td>
 		</tr>
 		<tr>
@@ -172,7 +188,7 @@ image: /images/paket-iklan-weekend-dan-sosmed-suara-surabaya-versi-1-2018.jpg
 		</tr>
 		<tr>
 			<td colspan="2">
-				<p>Keterangan :</p>
+				<h3>Keterangan :</h3>
 				<p>&bull; Paket belum termasuk PPn 10%</p>
 				<p>&bull; Pembuatan Spot Monolog Rp. 1.500.000,-</p>
 				<p>&bull; Pembuatan Materi Grafis (SosMed) Rp. 1.500.000,-</p>
