--- a/paket-iklan-radio/weekend-spot.html
+++ b/paket-iklan-radio/weekend-spot.html
@@ -13,7 +13,7 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 	<tbody>
 		<tr>
 			<td colspan="2">
-				<p>&bull; Jam Tayang :</p>
+				<h3>&bull; Jam Tayang :</h3>
 				<p>TRAFFIC HOUR ( 06.00 - 09.59 &amp; 16.00 - 19.59 )</p>
 				<p>PRIME TIME ( 05.00 - 05.59 &amp; 10.00 - 15.59 )</p>
 				<p>REGULER TIME ( 20.00 - 04.59 )</p>
@@ -22,7 +22,7 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 		</tr>
 		<tr>
 			<td colspan="2">
-				<p>&bull; PAKET WEEKEND 3 MIX (SPOT)</p>
+				<h3>&bull; PAKET WEEKEND 3 MIX (SPOT)</h3>
 			</td>
 		</tr>
 		<tr>
@@ -30,7 +30,10 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 				<p>JADWAL</p>
 			</td>
 			<td>
-				<p>KAMIS - 1 Spot Traffic Hour + 2 Spot Prime Time JUMAT - 1 Spot Traffic Hour + 2 Spot Prime Time&nbsp;SABTU - 1 Spot Traffic Hour + 2 Spot Prime Time&nbsp;MINGGU - 1 Spot Traffic Hour + 2 Spot Prime Time</p>
+				<p>KAMIS - 1 Spot Traffic Hour + 2 Spot Prime Time 
+					<br />JUMAT - 1 Spot Traffic Hour + 2 Spot Prime Time
+					<br />SABTU - 1 Spot Traffic Hour + 2 Spot Prime Time
+					<br />MINGGU - 1 Spot Traffic Hour + 2 Spot Prime Time</p>
 			</td>
 		</tr>
 		<tr>
@@ -59,7 +62,7 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 		</tr>
 		<tr>
 			<td colspan="2">
-				<p>&bull; PAKET WEEKEND 4 MIX (SPOT)</p>
+				<h3>&bull; PAKET WEEKEND 4 MIX (SPOT)</h3>
 			</td>
 		</tr>
 		<tr>
@@ -67,7 +70,10 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 				<p>JADWAL</p>
 			</td>
 			<td>
-				<p>KAMIS - 2 Spot Traffic Hour + 2 Spot Prime Time JUMAT - 2 Spot Traffic Hour + 2 Spot Prime Time&nbsp;SABTU - 2 Spot Traffic Hour + 2 Spot Prime Time&nbsp;MINGGU - 2 Spot Traffic Hour + 2 Spot Prime Time</p>
+				<p>KAMIS - 2 Spot Traffic Hour + 2 Spot Prime Time
+					<br />JUMAT - 2 Spot Traffic Hour + 2 Spot Prime Time
+					<br />SABTU - 2 Spot Traffic Hour + 2 Spot Prime Time
+					<br />MINGGU - 2 Spot Traffic Hour + 2 Spot Prime Time</p>
 			</td>
 		</tr>
 		<tr>
@@ -96,7 +102,7 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 		</tr>
 		<tr>
 			<td colspan="2">
-				<p>&bull; PAKET WEEKEND 3 MIX (ADLIBS)</p>
+				<h3>&bull; PAKET WEEKEND 3 MIX (ADLIBS)</h3>
 			</td>
 		</tr>
 		<tr>
@@ -104,7 +110,10 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 				<p>JADWAL</p>
 			</td>
 			<td>
-				<p>KAMIS - 1 Adlibs Traffic Hour + 2 Adlibs Prime Time JUMAT - 1 Adlibs Traffic Hour + 2 Adlibs Prime Time&nbsp;SABTU - 1 Adlibs Traffic Hour + 2 Adlibs Prime Time&nbsp;MINGGU - 1 Adlibs Traffic Hour + 2 Adlibs Prime Time</p>
+				<p>KAMIS - 1 Adlibs Traffic Hour + 2 Adlibs Prime Time
+					<br />JUMAT - 1 Adlibs Traffic Hour + 2 Adlibs Prime Time
+					<br />SABTU - 1 Adlibs Traffic Hour + 2 Adlibs Prime Time
+					<br />MINGGU - 1 Adlibs Traffic Hour + 2 Adlibs Prime Time</p>
 			</td>
 		</tr>
 		<tr>
@@ -133,7 +142,7 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 		</tr>
 		<tr>
 			<td colspan="2">
-				<p>&bull; PAKET WEEKEND 4 MIX (ADLIBS)</p>
+				<h3>&bull; PAKET WEEKEND 4 MIX (ADLIBS)</h3>
 			</td>
 		</tr>
 		<tr>
@@ -141,7 +150,10 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 				<p>JADWAL</p>
 			</td>
 			<td>
-				<p>KAMIS - 2 Adlibs Traffic Hour + 2 Adlibs Prime Time JUMAT - 2 Adlibs Traffic Hour + 2 Adlibs Prime Time&nbsp;SABTU - 2 Adlibs Traffic Hour + 2 Adlibs Prime Time&nbsp;MINGGU - 2 Adlibs Traffic Hour + 2 Adlibs Prime Time</p>
+				<p>KAMIS - 2 Adlibs Traffic Hour + 2 Adlibs Prime Time
+					<br />JUMAT - 2 Adlibs Traffic Hour + 2 Adlibs Prime Time
+					<br />SABTU - 2 Adlibs Traffic Hour + 2 Adlibs Prime Time
+					<br />MINGGU - 2 Adlibs Traffic Hour + 2 Adlibs Prime Time</p>
 			</td>
 		</tr>
 		<tr>
@@ -170,7 +182,7 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 		</tr>
 		<tr>
 			<td colspan="2">
-				<p>Keterangan :</p>
+				<h4>Keterangan :</h4>
 				<p>&bull; Paket belum termasuk PPn 10%</p>
 				<p>&bull; Pembuatan Spot Monolog Rp. 1.500.000,-</p>
 				<p>&bull; Jadwal Iklan Menyesuaikan Available Space Iklan</p>
@@ -178,7 +190,7 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 		</tr>
 	</tbody>
 </table>
-<h4>PAKET WEEKEND ( ADLIBS ) 2018 Radio Suara Surabaya</h4>
+<h2>PAKET WEEKEND ( ADLIBS ) 2018 Radio Suara Surabaya</h2>
 <table class="table table-responsive table-striped">
 	<tbody>
 		<tr>
@@ -189,7 +201,7 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 		</tr>
 		<tr>
 			<td colspan="2">
-				<p>&bull; PAKET WEEKEND 3 TRAFFIC HOUR ( ADLIBS )</p>
+				<h3>&bull; PAKET WEEKEND 3 TRAFFIC HOUR ( ADLIBS )</h3>
 			</td>
 		</tr>
 		<tr>
@@ -197,7 +209,10 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 				<p>JADWAL</p>
 			</td>
 			<td>
-				<p>KAMIS - 3 Adlibs Traffic Hour JUMAT - 3 Adlibs Traffic Hour&nbsp;SABTU - 3 Adlibs Traffic Hour&nbsp;MINGGU - 3 Adlibs Traffic Hour</p>
+				<p>KAMIS - 3 Adlibs Traffic Hour
+					<br />JUMAT - 3 Adlibs Traffic Hour
+					<br />SABTU - 3 Adlibs Traffic Hour
+					<br />MINGGU - 3 Adlibs Traffic Hour</p>
 			</td>
 		</tr>
 		<tr>
@@ -226,7 +241,7 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 		</tr>
 		<tr>
 			<td colspan="2">
-				<p>&bull; PAKET WEEKEND 4 TRAFFIC HOUR ( ADLIBS )</p>
+				<h3>&bull; PAKET WEEKEND 4 TRAFFIC HOUR ( ADLIBS )</h3>
 			</td>
 		</tr>
 		<tr>
@@ -234,7 +249,10 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 				<p>JADWAL</p>
 			</td>
 			<td>
-				<p>KAMIS - 4 Adlibs Traffic Hour JUMAT - 4 Adlibs Traffic Hour&nbsp;SABTU - 4 Adlibs Traffic Hour&nbsp;MINGGU - 4 Adlibs Traffic Hour</p>
+				<p>KAMIS - 4 Adlibs Traffic Hour
+					<br />JUMAT - 4 Adlibs Traffic Hour
+					<br />SABTU - 4 Adlibs Traffic Hour
+					<br />MINGGU - 4 Adlibs Traffic Hour</p>
 			</td>
 		</tr>
 		<tr>
@@ -273,7 +291,10 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 				<p>JADWAL</p>
 			</td>
 			<td>
-				<p>KAMIS - 3 Adlibs PRIME TIME JUMAT - 3 Adlibs PRIME TIME&nbsp;SABTU - 3 Adlibs PRIME TIME&nbsp;MINGGU - 3 Adlibs PRIME TIME</p>
+				<p>KAMIS - 3 Adlibs PRIME TIME
+					<br />JUMAT - 3 Adlibs PRIME TIME
+					<br />SABTU - 3 Adlibs PRIME TIME
+					<br />MINGGU - 3 Adlibs PRIME TIME</p>
 			</td>
 		</tr>
 		<tr>
@@ -302,7 +323,7 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 		</tr>
 	</tbody>
 </table>
-<h4>&bull; PAKET WEEKEND 4 PRIME TIME( ADLIBS )</h4>
+<h3>&bull; PAKET WEEKEND 4 PRIME TIME( ADLIBS )</h3>
 <table class="table table-responsive table-striped">
 	<tbody>
 		<tr>
@@ -310,7 +331,10 @@ image: /images/paket-iklan-weekend-spot--radio-suara-surabaya-versi-1-2018.jpg
 				<p>JADWAL</p>
 			</td>
 			<td>
-				<p>KAMIS - 4 Adlibs PRIME TIME JUMAT - 4 Adlibs PRIME TIME&nbsp;SABTU - 4 Adlibs PRIME TIME&nbsp;MINGGU - 4 Adlibs PRIME TIME</p>
+				<p>KAMIS - 4 Adlibs PRIME TIME
+					<br />JUMAT - 4 Adlibs PRIME TIME
+					<br />SABTU - 4 Adlibs PRIME TIME
+					<br />MINGGU - 4 Adlibs PRIME TIME</p>
 			</td>
 		</tr>
 		<tr>
