--- a/paket-iklan-radio/suara-surabaya-she-radio.html
+++ b/paket-iklan-radio/suara-surabaya-she-radio.html
@@ -1,17 +1,15 @@
 ---
 layout: home
-title: Pasang Iklan Radio Paket Radio Suara Surabaya dan M Radio
-description: Jasa Agency Pasang Iklan Radio Suara Surabaya Paket Radio Suara Surabaya dan M Radio
+title: Pasang Iklan Radio Paket Radio Suara Surabaya dan She Radio
+description: Jasa Agency Pasang Iklan Radio Suara Surabaya Paket Radio Suara Surabaya dan She Radio
 types: blog
 this_page: paket-iklan
-image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi-1-2018.jpg
+image: /images/paket-iklan-radio-suara-surabaya-dan-she-radio-suara-surabaya-versi-1-2018.jpg
 ---
 
 <img src='{{ site.url }}{{ page.image }}' alt='{{ page.title }}' title='{{ page.title }}' />
-
-<h3>
-	<span class="font3" style="font-weight:bold;text-decoration:underline;">PAKET BUNDLING 3 SPOT </span><span class="font3" style="font-weight:bold;">Suara Surabaya &amp; M RADIO</span>
-</h3>
+<h3>PAKET BUNDLING 3 SPOT</h3>
+<h3>Suara Surabaya FM100 She RADIO FM99.6</h3>
 <table class="table table-responsive table-striped">
 	<tbody>
 		<tr><td>Bentuk</td><td></td></tr>
@@ -26,10 +24,10 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		</tr>
 		<tr>
 			<td>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
-				<p>&bull; SPOT M Radio @ Rp 300.000,-</p>
+				<p>&bull; SPOT SHE Radio @ Rp 500.000,-</p>
 			</td>
 		</tr>
 		<tr>
@@ -51,7 +49,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		</tr>
 		<tr>
 			<td>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
 				<p>&bull; 3 kali SPOT / Hari</p>
@@ -69,7 +67,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		<tr>
 			<td>
 				<p>&bull; Suara Surabaya</p>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
 				<p>&bull; 21 Spot</p>
@@ -81,7 +79,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 				<p>TOTAL</p>
 			</td>
 			<td>
-				<p>Rp. 22.750.000,- </p>
+				<p>Rp. 22.750.000,- GROSS</p>
 			</td>
 		</tr>
 		<tr>
@@ -90,15 +88,15 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 			</td>
 			<td>
 				<p>&bull; Paket berlaku untuk Jadwal tayang selama 7 hari berturut - turut</p>
-				<p>&bull; Jadwal menyesuaikan Available Space (Ruang Iklan yang Tersedia)</p>
+				<p>&bull; Jadwal menyesuaikan Available Space (Ruang lklan yang Tersedia)</p>
 			</td>
 		</tr>
 	</tbody>
 </table>
 
-<h3>
-	<span class="font3" style="font-weight:bold;text-decoration:underline;">PAKET BUNDLING 4 SPOT </span><span class="font3" style="font-weight:bold;">Suara Surabaya &amp; M RADIO</span>
-</h3>
+<h3>PAKET BUNDLING 4 SPOT</h3>
+<h3>Suara Surabaya FM100 She RADIO FM99,6</h3>
+
 <table class="table table-responsive table-striped">
 	<tbody>
 		<tr><td>Bentuk</td><td></td></tr>
@@ -113,10 +111,10 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		</tr>
 		<tr>
 			<td>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
-				<p>&bull; SPOT M Radio @ Rp 300.000,-</p>
+				<p>&bull; SPOT SHE Radio @ Rp 500.000,-</p>
 			</td>
 		</tr>
 		<tr>
@@ -138,7 +136,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		</tr>
 		<tr>
 			<td>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
 				<p>&bull; 4 kali SPOT / Hari (ROS)</p>
@@ -156,7 +154,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		<tr>
 			<td>
 				<p>&bull; Suara Surabaya</p>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
 				<p>&bull; 28 Spot</p>
@@ -168,7 +166,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 				<p>TOTAL</p>
 			</td>
 			<td>
-				<p>Rp. 31.000.000,-</p>
+				<p>Rp. 31.000.000,- GROSS</p>
 			</td>
 		</tr>
 		<tr>
@@ -177,26 +175,25 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 			</td>
 			<td>
 				<p>&bull; Paket berlaku untuk Jadwal tayang selama 7 hari berturut - turut</p>
-				<p>&bull; Jadwal menyesuaikan Available Space (Ruang Iklan yang Tersedia)</p>
+				<p>&bull; Jadwal menyesuaikan Available Space (Ruang lklan yang Tersedia)</p>
 			</td>
 		</tr>
 	</tbody>
 </table>
 
-<h3>
-	<span class="font3" style="font-weight:bold;text-decoration:underline;">PAKET BUNDLING 3 Adlibs (Traffic Hour) </span><span class="font3" style="font-weight:bold;">Suara Surabaya &amp; M RADIO</span>
-</h3>
+<h3>PAKET BUNDLING 3 Adlibs (Traffic Hour)&nbsp;Suara Surabaya FM100&nbsp;She RADIO FM99,6</h3>
+
 <table class="table table-responsive table-striped">
 	<tbody>
 		<tr><td>Bentuk</td><td></td></tr>
 		<tr>
 			<td>
 				<p>&bull; Suara Surabaya</p>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
 				<p>&bull; ADLIBS Traffic Hour (06.00 - 09.59 dan 16.00 - 19.59)@ Rp. 1.600.000,-</p>
-				<p>&bull; ADLIBS M Radio @ Rp 300.000,-</p>
+				<p>&bull; ADLIBS SHE Radio @ Rp 550.000,-</p>
 			</td>
 		</tr>
 		<tr>
@@ -210,8 +207,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		<tr>
 			<td>
 				<p>Frekuensi</p>
-			</td>
-			<td></td>
+			</td><td></td>
 		</tr>
 		<tr>
 			<td>
@@ -223,7 +219,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		</tr>
 		<tr>
 			<td>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
 				<p>&bull; 3 kali Adlibs ( ROS ) / Hari</p>
@@ -240,7 +236,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		<tr>
 			<td>
 				<p>Total Tayang</p>
-			</td>
+			</td><td></td>
 		</tr>
 		<tr>
 			<td>
@@ -252,7 +248,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		</tr>
 		<tr>
 			<td>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
 				<p>&bull; 21 Adlibs</p>
@@ -272,26 +268,25 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 			</td>
 			<td>
 				<p>&bull; Paket berlaku untuk Jadwal tayang selama 7 hari berturut - turut</p>
-				<p>&bull; Jadwal menyesuaikan Available Space (Ruang Iklan yang Tersedia)</p>
+				<p>&bull; Jadwal menyesuaikan Available Space (Ruang IKIan yang Tersedia)</p>
 			</td>
 		</tr>
 	</tbody>
 </table>
 
-<h3>
-	<span class="font3" style="font-weight:bold;text-decoration:underline;">PAKET BUNDLING 4 Adlibs (Traffic Hour) </span><span class="font3" style="font-weight:bold;">Suara Surabaya &amp; M RADIO</span>
-</h3>
+<h3>PAKET BUNDLING 4 Adlibs (Traffic Hour)&nbsp;Suara Surabaya FM100&nbsp;She RADIO FM99,6</h3>
+
 <table class="table table-responsive table-striped">
 	<tbody>
 		<tr><td>Bentuk</td><td></td></tr>
 		<tr>
 			<td>
 				<p>&bull; Suara Surabaya</p>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
 				<p>&bull; ADLIBS Traffic Hour (06.00 - 09.59 dan 16.00 - 19.59)@ Rp. 1.600.000,-</p>
-				<p>&bull; ADLIBS M Radio @ Rp 300.000,-</p>
+				<p>&bull; ADLIBS SHE Radio @ Rp 550.000,-</p>
 			</td>
 		</tr>
 		<tr>
@@ -305,7 +300,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		<tr>
 			<td>
 				<p>Frekuensi</p>
-			</td>
+			</td><td></td>
 		</tr>
 		<tr>
 			<td>
@@ -317,7 +312,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		</tr>
 		<tr>
 			<td>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
 				<p>&bull; 4 kali Adlibs ( ROS ) / Hari</p>
@@ -334,8 +329,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		<tr>
 			<td>
 				<p>Total Tayang</p>
-			</td>
-			<td></td>
+			</td><td></td>
 		</tr>
 		<tr>
 			<td>
@@ -347,7 +341,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		</tr>
 		<tr>
 			<td>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
 				<p>&bull; 28 Adlibs</p>
@@ -358,7 +352,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 				<p>TOTAL</p>
 			</td>
 			<td>
-				<p>Rp. 44.400.000,- </p>
+				<p>Rp. 44.400.000,- GROSS</p>
 			</td>
 		</tr>
 		<tr>
@@ -373,26 +367,20 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 	</tbody>
 </table>
 
-<h3>
-	<span class="font3" style="font-weight:bold;text-decoration:underline;">PAKET BUNDLING 3 Adlibs (Prime Time) </span><span class="font3" style="font-weight:bold;">Suara Surabaya &amp; M RADIO</span>
-</h3>
+<h3>PAKET BUNDLING 3 Adlibs (Prime Time) Suara Surabaya FM100&nbsp;She RADIO FM99,6</h3>
+
 <table class="table table-responsive table-striped">
 	<tbody>
-		<tr><td>Bentuk</td><td></td></tr>
 		<tr>
 			<td>
+				<p>Bentuk</p>
 				<p>&bull; Suara Surabaya</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
+				<p>&nbsp;</p>
 				<p>&bull; ADLIBS Prime Time (05.00-05.59 &amp; 10.00-15.59) @ Rp. 1.350.000,-</p>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<p>&bull; M Radio</p>
-			</td>
-			<td>
-				<p>&bull; ADLIBS M Radio @ Rp 300.000,-</p>
+				<p>&bull; ADLIBS SHE Radio @ Rp 550.000,-</p>
 			</td>
 		</tr>
 		<tr>
@@ -403,7 +391,11 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 				<p>&bull; 7 Hari Berturut - turut</p>
 			</td>
 		</tr>
-		<tr><td>Frekuensi</td><td></td></tr>
+		<tr>
+			<td>
+				<p>Frekuensi</p>
+			</td><td></td>
+		</tr>
 		<tr>
 			<td>
 				<p>&bull; Suara Surabaya</p>
@@ -414,7 +406,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		</tr>
 		<tr>
 			<td>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
 				<p>&bull; 3 kali Adlibs ( ROS ) / Hari</p>
@@ -428,14 +420,24 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 				<p>&bull; Senin, Selasa, Rabu, Kamis, Jumat, Sabtu, Minggu</p>
 			</td>
 		</tr>
-		<tr><td>Total Tayang</td><td></td></tr>
+		<tr>
+			<td>
+				<p>Total Tayang</p>
+			</td><td></td>
+		</tr>
 		<tr>
 			<td>
 				<p>&bull; Suara Surabaya</p>
-				<p>&bull; M Radio</p>
 			</td>
 			<td>
 				<p>&bull; 21 Adlibs</p>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<p>&bull; SHE Radio</p>
+			</td>
+			<td>
 				<p>&bull; 21 Adlibs</p>
 			</td>
 		</tr>
@@ -453,32 +455,26 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 			</td>
 			<td>
 				<p>&bull; Paket berlaku untuk Jadwal tayang selama 7 hari berturut - turut</p>
-				<p>&bull; Jadwal menyesuaikan Available Space (Ruang Iklan yang Tersedia)</p>
+				<p>&bull; Jadwal menyesuaikan Available Space (Ruang IKIan yang Tersedia)</p>
 			</td>
 		</tr>
 	</tbody>
 </table>
 
-<h3>
-	<span class="font3" style="font-weight:bold;text-decoration:underline;">PAKET BUNDLING 4 Adlibs (Prime Time) </span><span class="font3" style="font-weight:bold;">Suara Surabaya &amp; M RADIO</span>
-</h3>
+<h3>PAKET BUNDLING 4 Adlibs (Prime Time) Suara Surabaya FM100&nbsp;She RADIO FM99,6</h3>
+
 <table class="table table-responsive table-striped">
 	<tbody>
-		<tr><td>Bentuk</td><td></td></tr>
 		<tr>
 			<td>
+				<p>Bentuk</p>
 				<p>&bull; Suara Surabaya</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
+				<p>&nbsp;</p>
 				<p>&bull; ADLIBS Prime Time (05.00-05.59 &amp; 10.00-15.59) @ Rp. 1.350.000,-</p>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<p>&bull; M Radio</p>
-			</td>
-			<td>
-				<p>&bull; ADLIBS M Radio @ Rp 300.000,-</p>
+				<p>&bull; ADLIBS SHE Radio @ Rp 550.000,-</p>
 			</td>
 		</tr>
 		<tr>
@@ -489,7 +485,11 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 				<p>&bull; 7 Hari Berturut - turut</p>
 			</td>
 		</tr>
-		<tr><td>Frekuensi</td><td></td></tr>
+		<tr>
+			<td>
+				<p>Frekuensi</p>
+			</td><td></td>
+		</tr>
 		<tr>
 			<td>
 				<p>&bull; Suara Surabaya</p>
@@ -500,7 +500,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		</tr>
 		<tr>
 			<td>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
 				<p>&bull; 4 kali Adlibs ( ROS ) / Hari</p>
@@ -514,14 +514,24 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 				<p>&bull; Senin, Selasa, Rabu, Kamis, Jumat, Sabtu, Minggu</p>
 			</td>
 		</tr>
-		<tr><td>Total Tayang</td><td></td></tr>
+		<tr>
+			<td>
+				<p>Total Tayang</p>
+			</td><td></td>
+		</tr>
 		<tr>
 			<td>
 				<p>&bull; Suara Surabaya</p>
-				<p>&bull; M Radio</p>
 			</td>
 			<td>
 				<p>&bull; 28 Adlibs</p>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<p>&bull; SHE Radio</p>
+			</td>
+			<td>
 				<p>&bull; 28 Adlibs</p>
 			</td>
 		</tr>
@@ -530,7 +540,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 				<p>TOTAL</p>
 			</td>
 			<td>
-				<p>Rp. 38.200.000,-</p>
+				<p>Rp. 38.200.000,- </p>
 			</td>
 		</tr>
 		<tr>
@@ -539,18 +549,21 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 			</td>
 			<td>
 				<p>&bull; Paket berlaku untuk Jadwal tayang selama 7 hari berturut - turut</p>
-				<p>&bull; Jadwal menyesuaikan Available Space (Ruang Iklan yang Tersedia)</p>
+				<p>&bull; Jadwal menyesuaikan Available Space (Ruang IKIan yang Tersedia)</p>
 			</td>
 		</tr>
 	</tbody>
 </table>
 
-<h3>
-	<span class="font3" style="font-weight:bold;text-decoration:underline;">PAKET BUNDLING 3 ADLIBS ( MIX ) </span><span class="font3" style="font-weight:bold;">Suara Surabaya &amp; M RADIO</span>
-</h3>
+<h3>PAKET BUNDLING 3 ADLIBS ( MIX ) Suara Surabaya FM100 She RADIO FM99,6</h3>
+
 <table class="table table-responsive table-striped">
 	<tbody>
-		<tr><td>Bentuk</td><td></td></tr>
+		<tr>
+			<td>
+				<p>Bentuk</p>
+			</td><td></td>
+		</tr>
 		<tr>
 			<td>
 				<p>&bull; Suara Surabaya</p>
@@ -562,10 +575,10 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		</tr>
 		<tr>
 			<td>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
-				<p>&bull; ADLIBS M Radio @ Rp 300.000,-</p>
+				<p>&bull; ADLIBS SHE Radio @ Rp 550.000,-</p>
 			</td>
 		</tr>
 		<tr>
@@ -576,7 +589,11 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 				<p>&bull; 7 Hari Berturut - turut</p>
 			</td>
 		</tr>
-		<tr><td>Frekuensi</td><td></td></tr>
+		<tr>
+			<td>
+				<p>Frekuensi</p>
+			</td><td></td>
+		</tr>
 		<tr>
 			<td>
 				<p>&bull; Suara Surabaya</p>
@@ -587,7 +604,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		</tr>
 		<tr>
 			<td>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
 				<p>&bull; 3 kali ADLIBS / Hari</p>
@@ -601,14 +618,24 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 				<p>&bull; Senin, Selasa, Rabu, Kamis, Jumat, Sabtu, Minggu</p>
 			</td>
 		</tr>
-		<tr><td>Total Tayang</td><td></td></tr>
+		<tr>
+			<td>
+				<p>Total Tayang</p>
+			</td><td></td>
+		</tr>
 		<tr>
 			<td>
 				<p>&bull; Suara Surabaya</p>
-				<p>&bull; M Radio</p>
 			</td>
 			<td>
 				<p>&bull; 21 ADLIBS</p>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<p>&bull; SHE Radio</p>
+			</td>
+			<td>
 				<p>&bull; 21 ADLIBS</p>
 			</td>
 		</tr>
@@ -626,18 +653,21 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 			</td>
 			<td>
 				<p>&bull; Paket berlaku untuk Jadwal tayang selama 7 hari berturut - turut</p>
-				<p>&bull; Jadwal menyesuaikan Available Space (Ruang Iklan yang Tersedia)</p>
+				<p>&bull; Jadwal menyesuaikan Available Space (Ruang lklan yang Tersedia)</p>
 			</td>
 		</tr>
 	</tbody>
 </table>
 
-<h3>
-	<span class="font3" style="font-weight:bold;text-decoration:underline;">PAKET BUNDLING 4 ADLIBS ( MIX ) </span><span class="font3" style="font-weight:bold;">Suara Surabaya &amp; M RADIO</span>
-</h3>
+<h3>PAKET BUNDLING 4 ADLIBS ( MIX ) Suara Surabaya FM100 She RADIO FM99,6</h3>
+
 <table class="table table-responsive table-striped">
 	<tbody>
-		<tr><td>Bentuk</td><td></td></tr>
+		<tr>
+			<td>
+				<p>Bentuk</p>
+			</td><td></td>
+		</tr>
 		<tr>
 			<td>
 				<p>&bull; Suara Surabaya</p>
@@ -649,10 +679,10 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		</tr>
 		<tr>
 			<td>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
-				<p>&bull; ADLIBS M Radio @ Rp 300.000,-</p>
+				<p>&bull; ADLIBS SHE Radio @ Rp 550.000,-</p>
 			</td>
 		</tr>
 		<tr>
@@ -660,10 +690,14 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 				<p>Periode</p>
 			</td>
 			<td>
-				<p>&bull; 7 Hari</p>
+				<p>&bull; 7 Hari Berturut - turut</p>
 			</td>
 		</tr>
-		<tr><td>Frekuensi</td><td></td></tr>
+		<tr>
+			<td>
+				<p>Frekuensi</p>
+			</td><td></td>
+		</tr>
 		<tr>
 			<td>
 				<p>&bull; Suara Surabaya</p>
@@ -674,7 +708,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 		</tr>
 		<tr>
 			<td>
-				<p>&bull; M Radio</p>
+				<p>&bull; SHE Radio</p>
 			</td>
 			<td>
 				<p>&bull; 4 kali ADLIBS / Hari (ROS)</p>
@@ -688,14 +722,24 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 				<p>&bull; Senin, Selasa, Rabu, Kamis, Jumat, Sabtu, Minggu ( 1 Minggu )</p>
 			</td>
 		</tr>
-		<tr><td>Total Tayang</td><td></td></tr>
+		<tr>
+			<td>
+				<p>Total Tayang</p>
+			</td><td></td>
+		</tr>
 		<tr>
 			<td>
 				<p>&bull; Suara Surabaya</p>
-				<p>&bull; M Radio</p>
 			</td>
 			<td>
 				<p>&bull; 28 ADLIBS</p>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<p>&bull; SHE Radio</p>
+			</td>
+			<td>
 				<p>&bull; 28 ADLIBS</p>
 			</td>
 		</tr>
@@ -713,7 +757,7 @@ image: /images/paket-iklan-radio-suara-surabaya-dan-m-radio-suara-surabaya-versi
 			</td>
 			<td>
 				<p>&bull; Paket berlaku untuk Jadwal tayang selama 7 hari berturut - turut</p>
-				<p>&bull; Jadwal menyesuaikan Available Space (Ruang Iklan yang Tersedia)</p>
+				<p>&bull; Jadwal menyesuaikan Available Space (Ruang lklan yang Tersedia)</p>
 			</td>
 		</tr>
 	</tbody>
